--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,53 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+    src: url('assets/fonts/RobotoCondensed-Regular.ttf');
+    font-family: RobotoCondensed;
+}
+
+@font-face {
+    src: url('assets/fonts/Tajawal-Regular.ttf');
+    font-family: Tajawal;
+}
+
+$mainFont: RobotoCondensed;
+$altFont: Tajawal;
+
+* {
+    font-family: $altFont;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: $mainFont;
+}
+.modal {
+    .modal-overlay {
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        background-color: rgb(0 0 0 / 58%);
+        z-index: 555;
+    }
+    .modal-dialog {
+        z-index: 888;
+        .modal-content {
+            .modal-body {
+                form {
+                    :is(input, textarea) {
+                        &.ng-invalid.ng-touched {
+                            border: 1px solid #f00;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
