Fixed Some Issues In The Responsive

--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -87,7 +87,7 @@ $mainColor: #00b894;
 @media (width <= 767px) {
     .auth-sec  {
         .right-box  {
-            padding-top:20px;
+            padding-top: 0;
             .title-head {
                 margin: 0 auto 30px auto;
                 width: 100%;
