--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -2,7 +2,7 @@
 <ng-component appAppPlaceholderDirective></ng-component>
 
 <app-header></app-header>
-<div class="home-sec pt-5">
+<div class="home-sec pt-5 pb-3">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 d-flex flex-wrap justify-content-between border-bottom pb-4">
