--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,4 +1,4 @@
-<section class="auth-sec vh-100 py-3">
+<section class="auth-sec vh-100 py-0 py-md-3">
     <div class="container-fluid h-100">
         <div class="row h-100">
             <div class="col-md-6 d-none d-md-block">
